istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.giropops"
      # tls:
      #   mode: SIMPLE
      #   credentialName: ext-host-cert
