istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - app.default
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: app.default
            subset: v1
          weight: 60
        - destination:
            host: app.default
            subset: v2
          weight: 30
        - destination:
            host: app.default
            subset: v3
          weight: 10
